# source-decay-ledger

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: sources.yaml
data/ledger/: .manifest.jsonl  2026-W25.jsonl
data/scores/: 2026-W25.jsonl
decisions/: DEC-SDL-001-yield-thresholds.md
decisions/source-registry/: 2026-W25.md
docs/: first-pr.md
scripts/: voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/source_decay_ledger/: __init__.py  __main__.py  cli.py  ledger.py  memo.py  registry.py  score.py
tests/: test_cli.py  test_ledger.py  test_memo.py  test_registry.py  test_score.py
