[project]
name = "source-decay-ledger"
version = "0.1.0"
description = "Weekly typed registry over the brief sources, scored by signal yield."
authors = [{name = "Vignesh Gopalakrishnan"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.scripts]
sdl = "source_decay_ledger.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/source_decay_ledger"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
